fix card on mobile

--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@
 @media (max-width:500px)  { 
 
     .rounded_card_400w {
-        padding: 10px!important; 
+        padding: 15px!important; 
         max-width: none!important;
     }
 
